argocd/allclear-dev/allclear-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allclear-web
  labels:
    app: allclear-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allclear-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: allclear-web
    spec:
      serviceAccountName: allclear
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/allclear-dev/allclear-web:17
          name: allclear-web
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          ports:
          - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/health-check
              port: 3000
          readinessProbe:
            httpGet:
              path: /api/health-check
              port: 3000
          startupProbe:
            httpGet:
              path: /api/health-check
              port: 3000
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: allclear-web
spec:
  type: ClusterIP
  selector:
    app: allclear-web
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: allclear-web
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - allclear-web.allclear-dev.svc.cluster.local
    - dev.all-clear.cc
  http:
    - route:
        - destination:
            host: allclear-web
